prepare for RHEL7 new scripts

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,19 @@ dist_plymouth_SCRIPTS=dracut/RHEL6/plymouth-tpm/install \
 		      dracut/RHEL6/plymouth-tpm/plymouth-pretrigger.sh
 endif
 
+if RHEL7
+plymouthdir=/usr/lib/dracut/modules.d/90crypt-tpm
+dist_plymouth_SCRIPTS=dracut/RHEL7/crypt-tpm/cryptroot-ask.sh \
+                      dracut/RHEL7/crypt-tpm/cryptroot-ask-tpm.sh \
+                      dracut/RHEL7/crypt-tpm/crypt-cleanup.sh \
+                      dracut/RHEL7/crypt-tpm/crypt-lib.sh \
+                      dracut/RHEL7/crypt-tpm/module-setup.sh \
+                      dracut/RHEL7/crypt-tpm/parse-crypt.sh \
+                      dracut/RHEL7/crypt-tpm/parse-keydev.sh \
+                      dracut/RHEL7/crypt-tpm/probe-keydev.sh \
+                      dracut/RHEL7/crypt-tpm/tpm-try-authless-indexes.sh
+endif
+
 dist_sbin_SCRIPTS=tpm-luks/tpm-luks-chain-hashes \
 	     tpm-luks/tpm-luks \
 	     tpm-luks/tpm-luks-gen-tgrub-pcr-values \
