--- a/configure.in
+++ b/configure.in
@@ -11,17 +11,26 @@ AC_PROG_CC
 
 if `egrep -q "Red Hat Enterprise Linux.*release 6" /etc/*-release`; then
 	AM_CONDITIONAL([RHEL6], true)
+        AM_CONDITIONAL([RHEL7], false)
 	AM_CONDITIONAL([FEDORA17], false)
 	AC_SUBST(DRACUT_MODULE_NAME, [plymouth])
 	AC_SUBST(DRACUT_KERNEL_MODULES, [""])
+elif `egrep -q "Red Hat Enterprise Linux.*release 7" /etc/*-release`; then
+        AM_CONDITIONAL([RHEL6], false)
+        AM_CONDITIONAL([RHEL7], true)
+        AM_CONDITIONAL([FEDORA17], false)
+        AC_SUBST(DRACUT_MODULE_NAME, [plymouth])
+        AC_SUBST(DRACUT_KERNEL_MODULES, [""])
 elif `egrep -q "CentOS release 6" /etc/*-release`; then
 	AM_CONDITIONAL([RHEL6], true)
+        AM_CONDITIONAL([RHEL7], false)
 	AM_CONDITIONAL([FEDORA17], false)
 	AC_SUBST(DRACUT_MODULE_NAME, [plymouth])
 	AC_SUBST(DRACUT_KERNEL_MODULES, [""])
 else
-	AM_CONDITIONAL([FEDORA17], true)
-	AM_CONDITIONAL([RHEL6], false)
+        AM_CONDITIONAL([RHEL6], false)
+	AM_CONDITIONAL([RHEL7], false)
+        AM_CONDITIONAL([FEDORA17], true)
 	AC_SUBST(DRACUT_MODULE_NAME, [crypt])
 	AC_SUBST(DRACUT_KERNEL_MODULES, ["tpm_bios tpm tpm_tis"])
 fi
