--- a/configure.in
+++ b/configure.in
@@ -19,7 +19,7 @@ elif `egrep -q "Red Hat Enterprise Linux.*release 7" /etc/*-release`; then
         AM_CONDITIONAL([RHEL6], false)
         AM_CONDITIONAL([RHEL7], true)
         AM_CONDITIONAL([FEDORA17], false)
-        AC_SUBST(DRACUT_MODULE_NAME, [plymouth])
+        AC_SUBST(DRACUT_MODULE_NAME, [crypt])
         AC_SUBST(DRACUT_KERNEL_MODULES, [""])
 elif `egrep -q "CentOS release 6" /etc/*-release`; then
 	AM_CONDITIONAL([RHEL6], true)
