--- a/tpm-luks.spec.in
+++ b/tpm-luks.spec.in
@@ -13,7 +13,7 @@ Summary:	Utility for storing a LUKS key using a TPM
 Group:		Security
 License:	GPLv2
 #URL:
-Source0:	tpm-luks-%{version}.tar.xz
+Source0:	tpm-luks-%{version}.tar.gz
 BuildRoot:	%(mktemp -ud %{_tmppath}/%{name}-%{version}-%{release}-XXXXXX)
 
 BuildRequires:	automake autoconf libtool openssl-devel
@@ -51,8 +51,8 @@ make install DESTDIR=$RPM_BUILD_ROOT
 %dir /etc/yum/post-actions
 /etc/yum/post-actions/tpm-luks.action
 %config /etc/yum/pluginconf.d/post-transaction-actions.conf
-/usr/lib/yum-plugins/post-transaction-actions.py*
-%config /etc/tpm-luks.action
+/usr/lib/yum-plugins/post-transaction-actions.py
+%config /etc/tpm-luks.conf
 
 %changelog
 * Tue Apr 09 2013 Ryan Harper <ryanh@us.ibm.com>
