fix missing tgrub2 file

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,6 +41,7 @@ endif
 dist_sbin_SCRIPTS=tpm-luks/tpm-luks-chain-hashes \
 	     tpm-luks/tpm-luks \
 	     tpm-luks/tpm-luks-gen-tgrub-pcr-values \
+	     tpm-luks/tpm-luks-gen-tgrub2-pcr-values \
 	     tpm-luks/tpm-luks-update \
 	     tpm-luks/tpm-luks-init
 
