--- a/xtra/rhel7/rhel.cfg
+++ b/xtra/rhel7/rhel.cfg
@@ -20,21 +20,15 @@ syslog_ident=mock
 syslog_device=
 
 # repos
-[my-rhel-7]
-name=myrepo mirror for rhel
-baseurl=http://myrepo/repos/rpm/rhel/71/
+[rhel]
+name=rhel
+baseurl=file:///mnt/cdrom
 enabled=1
 gpgcheck=0
 
-[my-rhel-7-server-rpms-7]
-name=myrepo mirror for rhel-7-server-rpms-7
-baseurl=http://myrepo/repos/rpm/rhel-7-server-rpms/7/$basearch
-enabled=1
-gpgcheck=0
-
-[my-epel-7]
-name=myrepo mirror for epel-7
-baseurl=http://myrepo/repos/rpm/epel/7/$basearch
+[epel]
+name=epel
+baseurl=http://download.fedoraproject.org/pub/epel/7/$basearch
 enabled=1
 gpgcheck=0
 
