--- a/tpm-luks.spec.in
+++ b/tpm-luks.spec.in
@@ -48,14 +48,7 @@ make install DESTDIR=$RPM_BUILD_ROOT
 %{_sbindir}/*
 %dir %{dracutlibdir}/modules.d/%{dracut_mod_name}
 %{dracutlibdir}/modules.d/%{dracut_mod_name}/*
-%dir /etc/yum/post-actions
-/etc/yum/post-actions/tpm-luks.action
-%config /etc/yum/pluginconf.d/post-transaction-actions.conf
-/usr/lib/yum-plugins/post-transaction-actions.py
-%config /etc/tpm-luks.conf
-
-%exclude /usr/lib/yum-plugins/post-transaction-actions.pyc
-%exclude /usr/lib/yum-plugins/post-transaction-actions.pyo
+%config(noreplace) /etc/tpm-luks.conf
 
 %changelog
 * Tue Apr 09 2013 Ryan Harper <ryanh@us.ibm.com>
