--- a/Makefile.am
+++ b/Makefile.am
@@ -3,27 +3,27 @@ SUBDIRS = swtpm-utils dracut .
 if FEDORA17
 plymouthdir=/usr/lib/dracut/modules.d/90crypt-tpm
 dist_plymouth_SCRIPTS=dracut/Fedora17/crypt-tpm/cryptroot-ask.sh \
-		      dracut/Fedora17/crypt-tpm/cryptroot-ask-tpm.sh \
-		      dracut/Fedora17/crypt-tpm/crypt-cleanup.sh \
-		      dracut/Fedora17/crypt-tpm/crypt-lib.sh \
-		      dracut/Fedora17/crypt-tpm/module-setup.sh \
-		      dracut/Fedora17/crypt-tpm/parse-crypt.sh \
-		      dracut/Fedora17/crypt-tpm/parse-keydev.sh \
-		      dracut/Fedora17/crypt-tpm/probe-keydev.sh \
-		      dracut/Fedora17/crypt-tpm/tpm-try-authless-indexes.sh
+                      dracut/Fedora17/crypt-tpm/crypt-cleanup.sh \
+                      dracut/Fedora17/crypt-tpm/cryptroot-ask-tpm.sh \
+                      dracut/Fedora17/crypt-tpm/crypt-lib.sh \
+                      dracut/Fedora17/crypt-tpm/module-setup.sh \
+                      dracut/Fedora17/crypt-tpm/parse-crypt.sh \
+                      dracut/Fedora17/crypt-tpm/parse-keydev.sh \
+                      dracut/Fedora17/crypt-tpm/probe-keydev.sh \
+                      dracut/Fedora17/crypt-tpm/tpm-try-authless-indexes.sh
 endif
 
 if RHEL6
 plymouthdir=/usr/share/dracut/modules.d/50plymouth-tpm
 dist_plymouth_SCRIPTS=dracut/RHEL6/plymouth-tpm/install \
-		      dracut/RHEL6/plymouth-tpm/check \
-		      dracut/RHEL6/plymouth-tpm/plymouth-newroot.sh \
-		      dracut/RHEL6/plymouth-tpm/cryptroot-ask.sh \
-		      dracut/RHEL6/plymouth-tpm/installkernel \
-		      dracut/RHEL6/plymouth-tpm/plymouth-populate-initrd \
-		      dracut/RHEL6/plymouth-tpm/cryptroot-ask-tpm.sh \
-		      dracut/RHEL6/plymouth-tpm/plymouth-emergency.sh \
-		      dracut/RHEL6/plymouth-tpm/plymouth-pretrigger.sh
+                      dracut/RHEL6/plymouth-tpm/check \
+                      dracut/RHEL6/plymouth-tpm/plymouth-newroot.sh \
+                      dracut/RHEL6/plymouth-tpm/cryptroot-ask.sh \
+                      dracut/RHEL6/plymouth-tpm/installkernel \
+                      dracut/RHEL6/plymouth-tpm/plymouth-populate-initrd \
+                      dracut/RHEL6/plymouth-tpm/cryptroot-ask-tpm.sh \
+                      dracut/RHEL6/plymouth-tpm/plymouth-emergency.sh \
+                      dracut/RHEL6/plymouth-tpm/plymouth-pretrigger.sh
 endif
 
 if RHEL7
@@ -39,12 +39,13 @@ dist_plymouth_SCRIPTS=dracut/RHEL7/crypt-tpm/cryptroot-ask.sh \
 endif
 
 dist_sbin_SCRIPTS=tpm-luks/tpm-luks-chain-hashes \
-	     tpm-luks/tpm-luks \
-	     tpm-luks/tpm-luks-gen-tgrub-pcr-values \
-	     tpm-luks/tpm-luks-gen-tgrub2-pcr-values \
-	     tpm-luks/tpm-luks-update \
-	     tpm-luks/tpm-luks-init \
-         tpm-luks/tpm-luks-ctl
+                  tpm-luks/tpm-luks \
+                  tpm-luks/tpm-luks-gen-tgrub-pcr-values \
+                  tpm-luks/tpm-luks-gen-tgrub2-pcr-values \
+                  tpm-luks/tpm-luks-update \
+                  tpm-luks/tpm-luks-init \
+                  tpm-luks/tpm-luks-ctl \
+                  tpm-luks/tpm-luks-svc
 
 #yumpluginconfdir=/etc/yum/pluginconf.d
 #dist_yumpluginconf_SCRIPTS=yum/post-transaction-actions.conf
