adding init.d service

--- a/tpm-luks.spec.in
+++ b/tpm-luks.spec.in
@@ -37,7 +37,7 @@ make %{?_smp_mflags}
 [ "${RPM_BUILD_ROOT}" != "/" ] && [ -d ${RPM_BUILD_ROOT} ] && rm -rf ${RPM_BUILD_ROOT};
 make install DESTDIR=$RPM_BUILD_ROOT
 mkdir -p $RPM_BUILD_ROOT/etc/init.d/
-ln -s /%{_sbindir}/tpm-luks/tpm-luks-svc $RPM_BUILD_ROOT/etc/init.d/tpm-luks-svc
+ln -s %{_sbindir}/tpm-luks-svc $RPM_BUILD_ROOT/etc/init.d/tpm-luks-svc
 
 %clean
 [ "${RPM_BUILD_ROOT}" != "/" ] && [ -d ${RPM_BUILD_ROOT} ] && rm -rf ${RPM_BUILD_ROOT};
