--- a/configure.in
+++ b/configure.in
@@ -27,6 +27,12 @@ elif `egrep -q "CentOS release 6" /etc/*-release`; then
 	AM_CONDITIONAL([FEDORA17], false)
 	AC_SUBST(DRACUT_MODULE_NAME, [plymouth])
 	AC_SUBST(DRACUT_KERNEL_MODULES, [""])
+elif `egrep -q "CentOS.*release 7" /etc/*-release`; then
+	AM_CONDITIONAL([RHEL6], false)
+	AM_CONDITIONAL([RHEL7], true)
+	AM_CONDITIONAL([FEDORA17], false)
+	AC_SUBST(DRACUT_MODULE_NAME, [crypt])
+	AC_SUBST(DRACUT_KERNEL_MODULES, [""])
 else
         AM_CONDITIONAL([RHEL6], false)
 	AM_CONDITIONAL([RHEL7], false)
